--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router": "^7.11.0",
+    "sweetalert2": "^11.26.17",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
